# guix_vs

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  ReadMe  config.h  config.h.in
adaptor/: CMakeLists.txt  guix_adaptor.c  guix_adaptor.h  guix_loadres.c  guix_loadres.h  guix_resmgr.c  guix_resmgr.h  list.h  resource_base.c  resource_base.h
demo/: CMakeLists.txt
demo/demo_guix_calculator/: CMakeLists.txt  demo_guix_calculator.c  guix_binres.h  guix_calculator.gxp  guix_calculator_resources.c  guix_calculator_resources.h  guix_calculator_specifications.c  guix_calculator_specifications.h
demo/demo_guix_keyboard/: CMakeLists.txt  demo_guix_keyboard.c  guix_keyboard.gxp  guix_keyboard_resources.c  guix_keyboard_resources.h  guix_keyboard_specifications.c  guix_keyboard_specifications.h
demo/demo_guix_simple/: CMakeLists.txt  demo_guix_simple.c  guix_simple.gxp  guix_simple_resources.c  guix_simple_resources.h  guix_simple_specifications.c  guix_simple_specifications.h
demo/demo_guix_smart_watch/: CMakeLists.txt  demo_guix_smart_watch.c  guix_binres.h  guix_res.h  guix_smart_watch_resources.h  guix_smart_watch_specifications.c  guix_smart_watch_specifications.h  qrcode.c
demo/demo_guix_smart_watch_ext/: CMakeLists.txt  calculator.c  demo_guix_smart_watch.c  expression_evaluate.c  guix_binres.bin.h  guix_smart_watch.gxp  guix_smart_watch_resources.c  guix_smart_watch_resources.h  guix_smart_watch_specifications.c  guix_smart_watch_specifications.h  healthy.c  map.c  scroll_wheel.c  settings.c
demo_guix_smart_watch/: demo_guix_smart_watch.c  guix_smart_watch.gxp  guix_smart_watch_resources.h  guix_smart_watch_specifications.c  guix_smart_watch_specifications.h  healthy.c  qrcode.c  weather.c
guix_project/: guix_sim.sln  guix_sim.vcxproj  guix_sim.vcxproj.filters
guix_project/Debug/: guix_sim.exe.recipe  guix_sim.ilk  guix_sim.vcxproj.FileListAbsolute.txt  vc142.idb
guix_project/Debug/guix_sim.tlog/: CL.command.1.tlog  CL.write.1.tlog  guix_sim.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
lib/: CMakeLists.txt
lib/adaptor/: guix_adaptor.c  guix_adaptor.h  gx_port.h  list.h
lib/qrcode/: CMakeLists.txt
